# apioni-ide

./: .gitignore  DEPLOYMENT.md  HANDOFF.md  LICENSE  PERF-REPORT.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
packaging/homebrew/: apioni.rb
src/: editor.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
